# multiple_tests

./: README.md
anime_api_test/: pyproject.toml
anime_api_test/utils/: general_functions.py
mysql_test/: README.md  pyproject.toml  rates.py  sql_insert_exchange_rates.py
mysql_test/utils/: general_configs.py  insert_data.sql  querys.sql  tables_configs.py
mysql_test/utils/functions/: general_functions.py
mysql_test/utils/queries/: get_max_time.sql  get_min_time.sql  insert_data.sql
pdf_to_txt_test/: capsulas_sql.txt  main.py  pyproject.toml
pyspark_test/: exchange_rates_spark_df.py  pyproject.toml  rates.py
streamlit_test/: README.md  main.py  pyproject.toml
streamlit_test/utils/: general_functions.py
streamlit_test/utils/csv_files/: btc_price_2023_10_06
time_series_test/: pyproject.toml  time_series_analysis.py
time_series_test/utils/: configs.py  ddbb_utils.py
time_series_test/utils/queries/: read_data.sql
